--- a/WebContents/WEB-INF/web.xml
+++ b/WebContents/WEB-INF/web.xml
@@ -9,4 +9,26 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <security-role>
+    <description></description>
+    <role-name>admin</role-name>
+  </security-role>
+  <security-constraint>
+    <display-name>BookMarket</display-name>
+    <web-resource-collection>
+      <web-resource-name>BookMarket</web-resource-name>
+      <url-pattern>/adminMain.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <description>권한 관리자명</description>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/login_admin.jsp</form-login-page>
+      <form-error-page>/login_admin.jsp</form-error-page>
+    </form-login-config>
+  </login-config>
 </web-app>
